--- a/index1.html
+++ b/index1.html
@@ -157,6 +157,10 @@
           <h4 align="center">Midterm</a></h4></br>
        <a href="https://fanjiangyuchen.github.io/a10726202.github.io/"><img src="images\4.jpg" align="center" height="250px"  style="padding-bottom: 10px">
           <h4 align="center">Personal Page</a></h4></br>
+        <footer>
+        <p align="center">Copyright © 2020 fanjiang</p>
+        </footer>
+     
      
     </div>
   </div>
